Increase test wait attempts and fix Maven command
Increase test wait attempts by introducing WAIT_ATTEMPTS=80 and replace hardcoded 40-loop limits in DevSampleWorkerLauncherIntegrationTest to allow longer polling. Refactor ExternalJavaWorkerProcess to use resolveMavenCommand(Path) that detects mvnw.cmd, mvnw, or falls back to mvn/mvn.cmd depending on OS/availability, improving cross-platform Maven wrapper handling. Update TaskWorkResult to create output as Collections.unmodifiableMap(new LinkedHashMap<>(output)) so the result is immutable while preserving insertion order.